添加 prod 的 yml 配置，并修改 prod 部署文件